major: fixed centering of images -> previous solution caused strange stretching from time to time

--- a/src/css/mibreit-slideshow.css
+++ b/src/css/mibreit-slideshow.css
@@ -9,17 +9,16 @@
 
 .mibreit-center-box {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 100%
 }
 
 .mibreit-imageElement img {
   position: relative;
-  padding: 0px;
-  display: block;
   margin: auto;
+  padding: 0;
+  align-self: center;
 }
 
 .mibreit-imageElement h3 {
